[package]
name = "daaninfobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.34", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
futures-util = "0.3"
grammers-client = "0.5"
grammers-crypto = "0.5.1"
grammers-mtproto = "0.5.0"
grammers-mtsender = "0.5.0"
grammers-session = "0.5.1"
grammers-tl-types = { version = "0.5.1", features = ["tl-mtproto"] }

